GNOME Bugzilla – Bug 685130
glabels broken with evolution-data-server 3.6.0
Last modified: 2013-04-01 08:55:18 UTC
glabels is broken with evolution-data-server 3.6.0 in two ways: - it's not using the "single include" style that eds now enforces, thus the libebook/e-book.h inclusions in merge-evolution.c and merge-vcard.c need to be adjusted to libebook/libebook.h. - e_book_new_system_addressbook() has been deprecated since 3.2.0, and removed in 3.6.0. glabels needs to be ported to the new ESource API.
For reference, the Fedora package carries a patch to address this: http://pkgs.fedoraproject.org/cgit/glabels.git/tree/glabels-3.0.0-new-eds.patch That should likely better be in the git tree :)
It is now :)