unbreak with evolution-data-server >= 3.6.0

https://bugzilla.gnome.org/show_bug.cgi?id=685130